@@ -15,5 +15,5 @@
   "source-url" : "https://github.com/JJ/p6-pod-load.git",
   "tags" : [ ],
   "test-depends" : [ ],
-  "version" : "0.0.2"
+  "version" : "0.0.3"
 }
