@@ -1,3 +1,7 @@
+2018-12-14  Juan J. merelo  <jmerelo@penny>
+
+	* lib/Pod/Load.pm6 (Pod): Eliminates one multi to avoid confusion with Str. Leaves just the one.
+
 Revision history for Pod-Load
 
 {{$NEXT}}
